--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "buffer-crc32": "^1.0.0",
+    "cookie-parser": "^1.4.6",
+    "cookie-signature": "^1.2.1",
     "cors": "^2.8.5",
     "curl": "^0.1.4",
     "custom-env": "^2.0.2",
-    "express": "^2.5.11",
+    "express": "^4.21.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.0.0",
     "jsonwebtoken": "^9.0.1",
@@ -23,6 +27,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "socket.io": "^1.5.1",
+    "uid2": "^1.0.0",
     "xss": "^1.0.14"
   }
 }
